Популярные фильмы. Конфликты с другой фичей.